--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,10 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Imports: 
+    data.table,
+    dplyr,
+    EpiDISH,
+    GenomicRanges,
+    IRanges
+RoxygenNote: 7.3.1
