--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: METER
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: METER (METhylation analyzER)
+Version: 0.2.0
+Description:
+    METER is a computational tool to analyze TC exploiting iDMS and iDMR in
+    lpWGBS data of cfDNA samples. It comprises three modules to measure
+    circulating tumor DNA (ctDNA), based on tumor-specific iDMS, detect ctDNA,
+    based on tumor-specific iDMR, and infer tumor subtypes from ctDNA, based on
+    tumor subtype-specific iDMR.
+Authors@R:
+    person("Marta", "Paoli", role = "ctb")
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
