--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: METER
 Type: Package
-Title: METER (METhylation analyzER)
-Version: 0.2.0
+Title: METER (METhylome analyzER)
+Version: 0.3.0
 Description:
-    METER is a computational tool to analyze TC exploiting iDMS and iDMR in
-    lpWGBS data of cfDNA samples. It comprises three modules to measure
-    circulating tumor DNA (ctDNA), based on tumor-specific iDMS, detect ctDNA,
-    based on tumor-specific iDMR, and infer tumor subtypes from ctDNA, based on
-    tumor subtype-specific iDMR.
+    METER is an R package designed for analyzing tumor content (TC) in cell-free DNA (cfDNA) samples
+    using low-pass whole-genome bisulfite sequencing (lpWGBS) data. It leverages
+    differentially methylated sites (DMS) and regions (DMR) to provide a
+    comprehensive computational framework. The package includes three modules,
+    METER-quant to measure ctDNA, based on tumor-specific DMS,
+    METER-detect to detect ctDNA, based on tumor-specific DMR, 
+    METER-subtype to infer tumor subtype from ctDNA, based on tumor subtype-specific DMR.
 Authors@R:
-    person("Marta", "Paoli", role = "ctb")
+    person("Marta", "Paoli", email = "marta.paoli1991@gmail.com", role = c("aut", "cre"))
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -20,9 +22,10 @@ Suggests:
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Imports: 
+    assertthat,
     data.table,
     dplyr,
     EpiDISH,
     GenomicRanges,
     IRanges
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
